--- a/css/wedding.css
+++ b/css/wedding.css
@@ -125,10 +125,12 @@ img{
     margin:36px auto 0 ;
     transition: transform 200ms ease-in-out 0s;
     opacity: 0;
+    visibility: hidden;
     transition: .5s;
 }
 #join.active{
     opacity: 1;
+    visibility: visible;
     
 }
 #coverInner::after{
