--- a/css/wedding.css
+++ b/css/wedding.css
@@ -1,121 +1,141 @@
-*{
-  margin:0;
-  padding:0;
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-@font-face{
-    font-family:"fzjljw";
-    src:url(./FZJLJW.TTF)
+
+@font-face {
+    font-family: "fzjljw";
+    src: url(./FZJLJW.TTF)
 }
-body{
+
+body {
     font-family: 'fzjljw';
     font-size: 14px;
 }
-html,body{
+
+html,
+body {
     width: 100%;
     height: 100%;
     max-width: 640px;
-    margin:0 auto;
+    margin: 0 auto;
     position: relative;
 }
-ul li{
+
+ul li {
     list-style: none;
 }
-.inner-model{
+
+.inner-model {
     padding: 15px;
 }
-.mr10{
+
+.mr10 {
     margin-right: 10px;
 }
-.ml10{
+
+.ml10 {
     margin-left: 10px;
 }
-.clear{
-  clear: both;
+
+.clear {
+    clear: both;
 }
-.clear::after{
-  display: block; 
+
+.clear::after {
+    display: block;
 }
-img{
+
+img {
     max-width: 100%;
 }
 
 /*************envlope**********/
-.envelope{
-    background:rgba(255, 247, 243, 1);
+.envelope {
+    background: rgba(255, 247, 243, 1);
     width: 100%;
     height: 100vh;
     position: absolute;
     left: 0;
-    top:0;
+    top: 0;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition:.6s;
+    transition: .6s;
     opacity: 1;
 }
 
-.envelope_inner{
+.envelope_inner {
     position: relative;
-    
+
 }
-.envelope img{
+
+.envelope img {
     width: 90%;
 }
-.envelope .hat{
-    
+
+.envelope .hat {
+
     position: absolute;
 
 }
+
 /*************cover****************/
 
-#wedding{
+#wedding {
     position: relative;
     min-height: 100%;
     max-width: 640px;
     margin: 0 auto;
     overflow: hidden;
 }
-.cover{
+
+.cover {
     position: absolute;
     left: 0;
-    top:0;
+    top: 0;
     width: 100%;
     height: 100%;
     /* background:url(../images/bg/top.png) center top no-repeat,url(../images/bg/bottom.png) center bottom no-repeat; 
      background-size: 100% auto;
      */
-     background-color: rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
     background-image: url(../images/bg/cover_bottom.png), url(../images/bg/cover_middle.png), url(../images/bg/cover_top.png);
     background-position: right 20px bottom, right center, right top;
     background-size: 46vh, 13vh, 30vh;
     background-repeat: no-repeat, no-repeat, no-repeat;
-    background-color:rgba(255, 247, 243, 1);
-    transition:.5s;
+    background-color: rgba(255, 247, 243, 1);
+    transition: .5s;
     transform: translateX(100%);
     align-items: center;
 
 }
-.cover.shade-in{
+
+.cover.shade-in {
     display: flex;
 }
-.cover_content{
+
+.cover_content {
     text-align: center;
     width: 100%;
 }
-#coverInner{
+
+#coverInner {
     padding-left: 30px;
     text-align: left;
     font-size: 18px;
-    list-style: 1.3;
+    line-height: 1.3;
+    color: #333;
 }
-#join{
+
+#join {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid currentcolor;
+    /* border: 1px solid currentcolor; */
     border-radius: 5px;
     padding: 0px 20px;
     text-align: center;
@@ -123,35 +143,68 @@ img{
     width: 106px;
     font-size: 1rem;
     color: currentcolor;
-    margin:36px auto 0 ;
-    transition: transform 200ms ease-in-out 0s;
+    margin: 36px auto 0;
+    /* transition: transform 200ms ease-in-out 0s; */
     opacity: 0;
     visibility: hidden;
     transition: .5s;
 }
-#join.active{
+
+#join img {
+    width: 40px;
+    position: relative;
+    animation: toRight 1.5s infinite both;
+}
+
+#join.active {
     opacity: 1;
     visibility: visible;
-    
+
 }
-#coverInner::after{
+
+#coverInner::after {
     content: '|';
     animation: blink 1.5s infinite
 }
 
 
-@keyframes blink{
-    from{
+@keyframes blink {
+    from {
         opacity: 0;
     }
-    to{
+
+    to {
         opacity: 1;
+    }
+}
+
+@keyframes toRight {
+    0% {
+        transform: translateX(0);
+    }
+
+    50% {
+        -webkit-transform: translateX(3px);
+
+        transform: translateX(3px);
+
+    }
+
+    80% {
+        -webkit-transform: translateX(6px);
+
+        transform: translateX(6px);
+
+    }
+
+    100% {
+        transform: translateX(0);
     }
 }
 
 
 /********wedding cons********/
-.wedding-cons{
+.wedding-cons {
     opacity: 0;
     position: absolute;
     left: 0;
@@ -164,17 +217,19 @@ img{
     border-radius: 100%;
 }
 
-.wedding-inner{
+.wedding-inner {
     width: 100%;
     height: 100%;
     overflow-y: auto;
 }
-.top{
+
+.top {
     margin-top: 30px;
     margin-bottom: 30px;
 }
-.music{
-    width:32px;
+
+.music {
+    width: 32px;
     height: 32px;
     position: fixed;
     top: 30px;
@@ -183,18 +238,22 @@ img{
     background: #fff;
     border-radius: 100%;
 }
-.music.active{
+
+.music.active {
     animation: circle infinite linear 3s forwards;
 }
-.big-pic{
+
+.big-pic {
     position: relative;
     padding: 0 30px 30px 15px;
 }
-.big-pic .pic{
+
+.big-pic .pic {
     position: relative;
     z-index: 10;
 }
-.big-pic .memo{
+
+.big-pic .memo {
     position: absolute;
     z-index: 15;
     left: 12px;
@@ -202,17 +261,20 @@ img{
     width: 76px;
     /* animation: circle infinite linear 10s forwards;  */
 }
-@keyframes circle{
-    0%{
-        transform:rotate(0)
+
+@keyframes circle {
+    0% {
+        transform: rotate(0)
     }
-    100%{
-        transform:rotate(360deg)
+
+    100% {
+        transform: rotate(360deg)
     }
 }
-.big-pic::before{
+
+.big-pic::before {
     position: absolute;
-    width:80%;
+    width: 80%;
     height: 80%;
     content: '';
     top: 16px;
@@ -220,73 +282,83 @@ img{
     bottom: 0;
     border: 10px solid #b2c1a4;
 }
+
 /*****shde in out***/
-.shade-out{
+.shade-out {
     transform: translateX(-100%);
     opacity: 0;
 }
-.shade-in{
+
+.shade-in {
     transform: translateX(0);
     opacity: 1;
 }
-.groom-bride{
+
+.groom-bride {
     padding: 0 15px;
     font-size: 14px;
 }
-.groom-bride img{
+
+.groom-bride img {
     width: 60px;
     height: 60px;
     border-radius: 100%;
 }
-.groom-bride .person{
+
+.groom-bride .person {
     display: flex;
     align-items: flex-end;
     margin-bottom: 20px;
-    
+
 }
-.groom-bride  .pics{
+
+.groom-bride .pics {
     width: 60px;
     text-align: center;
 }
-.groom-bride  .desc{
-    flex:1;
+
+.groom-bride .desc {
+    flex: 1;
     /* border:1px solid rgba(186,219,196,.2); */
     border-radius: 4px;
-    background: rgba(186,219,196,.3);
+    background: rgba(186, 219, 196, .3);
     padding: 5px;
     position: relative;
 }
-.groom-bride  .desc::after{
+
+.groom-bride .desc::after {
     content: '';
     position: absolute;
     left: -12px;
     bottom: 10px;
     border-width: 6px;
     border-style: solid;
-    border-color: rgba(186,219,196,.3) transparent transparent;
+    border-color: rgba(186, 219, 196, .3) transparent transparent;
     transform: rotate(90deg);
 }
 
-.groom  .desc::after{
+.groom .desc::after {
     left: auto;
     right: -12px;
     transform: rotate(-90deg);
 }
 
 /*life photo*/
-.life-photos{
+.life-photos {
     background: url(../images/bg/mt.jpg) center top no-repeat;
     background-size: 100% 100%;
     background-attachment: fixed;
-    padding:  14px;
+    padding: 14px;
     font-size: 14px;
 }
-.life-photos .item{
+
+.life-photos .item {
     display: flex;
     justify-content: space-between;
     margin-bottom: 14px;
 }
-.life-photos .col{
+
+.life-photos .col {
     width: 49%;
     padding: 10px;
     background: #fff;
@@ -299,8 +371,9 @@ img{
     padding: 8px;
     background: url(../images/bg/circle.png) center top no-repeat;
     background-size: 100% 100%;
-  }
-  .swiper-slide {
+}
+
+.swiper-slide {
     text-align: center;
     font-size: 18px;
     background: transparent;
@@ -318,68 +391,76 @@ img{
     -webkit-align-items: center;
     align-items: center;
     overflow: hidden;
-  }
-.swiper-inner{
+}
+
+.swiper-inner {
     overflow: hidden;
     position: relative;
-    
+
 }
-.swiper-slide img{
+
+.swiper-slide img {
     transform: rotate(8deg) scale(.8);
-    border:10px solid #fff;
-    box-shadow:  0 0  5px  3px rgba(0,0,0,.1);
-    transition:.35s;
+    border: 10px solid #fff;
+    box-shadow: 0 0 5px 3px rgba(0, 0, 0, .1);
+    transition: .35s;
     /* transform-origin: 0 0; */
 }
-.swiper-slide-active img{
-    
-    
-}
-.sub-title{
+
+.swiper-slide-active img {}
+
+.sub-title {
     text-align: center;
     padding: 20px 0;
 }
-.sub-title img{
+
+.sub-title img {
     width: 60px;
 }
 
 /***wedding time ****/
- 
-.wedding-time .ul{
+
+.wedding-time .ul {
     display: flex;
     justify-content: space-around;
     margin-bottom: 20px;
 }
-.wedding-time .item{
-   text-align: center;
-   width: 80px;
-   height: 80px;
-   background:url(../images/bg/time_bg.jpg) center top no-repeat;
-   background-size: 100% 100%;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-    
+
+.wedding-time .item {
+    text-align: center;
+    width: 80px;
+    height: 80px;
+    background: url(../images/bg/time_bg.jpg) center top no-repeat;
+    background-size: 100% 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
 }
-.wedding-time .big-item{
-  width: 120px;
-  height: 120px;
+
+.wedding-time .big-item {
+    width: 120px;
+    height: 120px;
 }
-.wedding-time .num{
+
+.wedding-time .num {
     font-size: 30px;
 
 }
-.wedding-time .unit{
+
+.wedding-time .unit {
     font-size: 14px;
 }
-.time-address .item{
+
+.time-address .item {
     display: flex;
     align-items: center;
-    font-size:20px;
-    
+    font-size: 20px;
+
 }
-.time-address .icon{
+
+.time-address .icon {
     display: flex;
     width: 40px;
     height: 40px;
@@ -388,9 +469,10 @@ img{
     text-align: center;
 }
 
-.time-address img{
+.time-address img {
     width: 36px;
 }
-.time-address .time{
+
+.time-address .time {
     width: 26px;
 }
