--- a/css/wedding.css
+++ b/css/wedding.css
@@ -144,7 +144,7 @@ img {
     font-size: 1rem;
     color: currentcolor;
     margin: 36px auto 0;
-    /* transition: transform 200ms ease-in-out 0s; */
+    transition: transform 200ms ease-in-out 0s;
     opacity: 0;
     visibility: hidden;
     transition: .5s;
