--- a/css/wedding.css
+++ b/css/wedding.css
@@ -240,7 +240,14 @@ img {
     background: #fff;
     border-radius: 100%;
 }
-
+.wedding-cons .con-inner{
+    display: none;
+    width: 100%;
+    height: 100%;
+}
+.wedding-cons.shade-in .con-inner{
+    display: block
+}
 .wedding-inner {
     width: 100%;
     height: 100%;
@@ -372,7 +379,6 @@ img {
 .life-photos {
     background: url(../images/bg/mt.jpg) center top no-repeat;
     background-size: 100% 100%;
-    background-attachment: fixed;
     padding: 14px;
     font-size: 14px;
 }
